--- a/ShoppingCartWeb/Views/CategoryMaster/IndexCategoryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CategoryMaster/IndexCategoryMaster.cshtml
@@ -41,7 +41,7 @@
 
     <div class="table-responsive">
 
-        <table id="myTable" class="table table-bordered" >
+        <table id="myTable" class="table table-bordered">
             <thead>
                 <tr>
                     <th>
@@ -69,7 +69,7 @@
 
                                 <div class="btn-group" role="group">
 
-                                    
+
                                     <a asp-controller="CategoryMaster" asp-action="UpdateCategoryMaster" asp-route-categoryId="@item.CategoryId" asp-route-currentPageNo="" class="btn btn-sm ml-1">
                                         <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
                                     </a>
@@ -94,57 +94,57 @@
                         }
 
                     </tr>
-
-                    
                 }
-
-                <!-- Enable Confirmation Modal for each item -->
-                <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure you want to Enable this item?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                                <a id="enableModalButton" asp-controller="CategoryMaster" asp-action="EnableCategory" asp-route-categoryId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <!-- Delete Confirmation Modal for each item -->
-                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure you want to delete this item?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                <a id="deleteModalButton" asp-controller="CategoryMaster" asp-action="RemoveCategoryMaster" asp-route-categoryId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-danger">Delete</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
             </tbody>
         </table>
 
     </div>
+
+
+    <!-- Enable Confirmation Modal for each item -->
+    <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to Enable this item?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                    <a id="enableModalButton" asp-controller="CategoryMaster" asp-action="EnableCategory" asp-route-categoryId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Delete Confirmation Modal for each item -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this item?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <a id="deleteModalButton" asp-controller="CategoryMaster" asp-action="RemoveCategoryMaster" asp-route-categoryId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-danger">Delete</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <br />
     <br />
