--- a/ShoppingCartWeb/Views/Registration/IndexRegistration.cshtml
+++ b/ShoppingCartWeb/Views/Registration/IndexRegistration.cshtml
@@ -128,75 +128,57 @@
 
                 }
 
-                <!-- Enable Confirmation Modal for each item -->
-                <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure you want to Enable this item?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                                <a id="enableModalButton" asp-controller="Registration" asp-action="EnableRegistration" asp-route-registrationId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Delete Confirmation Modal for each item -->
-                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure you want to delete this item?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                <a id="deleteModalButton" asp-controller="Registration" asp-action="RemoveRegistration" asp-route-registrationId="" asp-route-currentPageNo="@Model.CurrentPage" asp-route-orderBys-="@Model.OrderBy" class="btn btn-danger">Delete</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <!-- Modal Code (outside the loop) -->
-                <div class="modal fade" id="registrationModal" tabindex="-1" role="dialog" aria-labelledby="registrationModalLabel">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="registrationModalLabel">Registered Person Details</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-
-                            <!-- Placeholder for partial view -->
-                            <div id="registrationModalContent"></div>
-
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-               
-
+                
             </tbody>
         </table>
     </div>
+
+    <!-- Placeholder for partial view -->
+    <div id="registrationModalContent"></div>
+
+    <!-- Enable Confirmation Modal for each item -->
+    <div class="modal fade" id="enableModal" tabindex="-1" role="dialog" aria-labelledby="enableModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="enableModalLabel">Confirm Enable</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to Enable this item?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                    <a id="enableModalButton" asp-controller="Registration" asp-action="EnableRegistration" asp-route-registrationId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Confirmation Modal for each item -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this item?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <a id="deleteModalButton" asp-controller="Registration" asp-action="RemoveRegistration" asp-route-registrationId="" asp-route-currentPageNo="@Model.CurrentPage" asp-route-orderBys-="@Model.OrderBy" class="btn btn-danger">Delete</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <br />
     <br />
@@ -242,10 +224,11 @@
 @section Scripts
     {
 
-    
+
     <script>
         // When a "View" button is clicked
         $('a[id^="viewRegistrationButton_"]').on('click', function () {
+
             var registrationId = $(this).data('registrationid');
 
             // Make an AJAX request to load the partial view
