--- a/ShoppingCartWeb/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartWeb/Views/Shared/_Layout.cshtml
@@ -7,24 +7,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     @*<title>AdminLTE 3 | Blank Page</title>*@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <!-- this is for delete popup -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-
+    @*<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>*@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
     <!-- #Table Demo Script -->
-
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
-
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
 
    
@@ -165,6 +164,8 @@
                             </li>
                         }
 
+
+
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
@@ -245,6 +246,8 @@
     <script src="~/AdminLTE/dist/js/pages/dashboard.js"></script>
     <script src="~/AdminLTE/dist/js/demo.js"></script>*@
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
    
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
