--- a/ShoppingCartWeb/Views/User/IndexUser.cshtml
+++ b/ShoppingCartWeb/Views/User/IndexUser.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <br />
 <div class="row pb-2">
 
@@ -48,7 +49,9 @@
                     <th>
                         Role
                     </th>
-                    <th></th>
+                    <th>
+                        Action
+                    </th>
                 </tr>
             </thead>
             <tbody>
