--- a/ShoppingCartWeb/Views/MenuRoleMapping/IndexMenuRoleMapping.cshtml
+++ b/ShoppingCartWeb/Views/MenuRoleMapping/IndexMenuRoleMapping.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShoppingCartWeb.Models.VM.MenuPaginationVM
+﻿@model ShoppingCartWeb.Models.VM.MenuRoleMappingPaginationVM
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -16,13 +16,13 @@
             }
         </style>
 
-        <h1 class="text-dark">Menus</h1>
+        <h1 class="text-dark">Menu Role Mappings</h1>
     </div>
 
 
     <div class="col-2 d-flex justify-content-end align-items-start">
 
-        <a asp-controller="Menu" asp-action="CreateMenu" class="btn btn-primary btn-sm ms-2">
+        <a asp-controller="MenuRoleMapping" asp-action="CreateMenuRoleMapping" class="btn btn-primary btn-sm ms-2">
             <div class="d-flex align-items-center">
 
                 <span class="d-inline-block align-middle" style="font-size: 17px;"><i class="bi bi-plus-square-fill"></i>  Create </span>
@@ -42,15 +42,12 @@
             <thead>
                 <tr>
                     <th>
-                        Menu Name
-                    </th>
-                    
-                    <th>
-                        Description
+                        Role
                     </th>
                     <th>
-                        Url
+                        Menu
                     </th>
+                   
                     <th>
                         Action
                     </th>
@@ -58,28 +55,23 @@
             </thead>
             <tbody>
 
-                @foreach (var item in Model.MenuDTO)
+                @foreach (var item in Model.MenuRoleMappingDTO)
                 {
 
                     <tr>
-                        <td>@item.MenuName</td>
-                        <td style="white-space: nowrap;"> @item.Description</td>
-                        <td style="white-space: nowrap;"> @item.Url</td>
+                        <td style="white-space: nowrap;"> @item.RoleMaster.RoleName</td>
+                        <td style="white-space: nowrap;"> @item.Menu.MenuName</td>
 
                         @if (item.IsDeleted == false)
                         {
                             <td>
 
                                 <div class="btn-group" role="group">
-                                    <a asp-controller="Menu" asp-action="UpdateMenu" asp-route-menuId="@item.MenuId" class=" button-spacing btn ml-1 text-success" style="font:bold">
-                                        <span id="boot-icon" class="bi bi-pencil-square" style="font-size: 17px; color: rgb(0, 128, 55); -webkit-text-stroke-width: 0.6px; opacity: 0.9;"></span>
-                                    </a>
 
-                                    <a href="#" class="btn ml-1 text-danger delete-button" style="font:bold" data-toggle="modal" data-target="#deleteModal" data-menuId="@item.MenuId">
-
-                                        <span id="boot-icon" class="bi bi-trash-fill"
-                                              style="font-size: 17px; color: rgb(255, 0, 0); -webkit-text-stroke-width: 0px; opacity: 0.9;">
-                                        </span>
+                                  
+                                    <a href="#" class="btn ml-1 text-danger delete-button" style="font:bold" data-toggle="modal" data-target="#deleteModal"
+                                       data-MappingId="@item.MenuRoleMappingId">
+                                        <i class="bi bi-lock-fill"></i> Disable
                                     </a>
                                 </div>
                             </td>
@@ -90,8 +82,9 @@
 
                                 <div class="btn-group" role="group">
 
-                                    <a href="#" class="btn btn-primary btn-sm ml-2 enable-button" data-toggle="modal" data-target="#enableModal" data-menuId="@item.MenuId">
-                                        Active
+                                    <a href="#" class="btn btn-success btn-sm ml-2 enable-button" data-toggle="modal" data-target="#enableModal" data-MappingId="@item.MenuRoleMappingId">
+                                        <i class="bi bi-unlock-fill"></i>
+                                        Enable 
                                     </a>
 
                                 </div>
@@ -125,7 +118,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                    <a id="enableModalButton" asp-controller="Menu" asp-action="EnableMenu" asp-route-menuId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
+                    <a id="enableModalButton" asp-controller="MenuRoleMapping" asp-action="EnableMenuRoleMapping" asp-route-menuRoleMappingId="" asp-route-currentPageNo="@Model.CurrentPage" class="btn btn-success">Yes</a>
                 </div>
             </div>
         </div>
@@ -147,7 +140,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <a id="deleteModalButton" asp-controller="Menu" asp-action="RemoveMenu" asp-route-menuId="" class="btn btn-danger">Delete</a>
+                    <a id="deleteModalButton" asp-controller="MenuRoleMapping" asp-action="RemoveMenuRoleMapping" asp-route-menuRoleMappingId="" class="btn btn-danger">Yes</a>
                 </div>
             </div>
         </div>
@@ -163,7 +156,7 @@
             @if (Model.CurrentPage > 1)
             {
                 <li class="page-item">
-                    <a class="page-link" href="/Menu/IndexMenu?orderBy=@Model.OrderBy&currentPage=@(Model.CurrentPage-1)" aria-label="Previous">
+                    <a class="page-link" href="/MenuRoleMapping/IndexMenuRoleMapping?orderBy=@Model.OrderBy&currentPage=@(Model.CurrentPage-1)" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
@@ -174,18 +167,18 @@
                 if (i == Model.CurrentPage)
                 {
 
-                    <li class="page-item active"><a class="page-link active" href="/Menu/IndexMenu?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                    <li class="page-item active"><a class="page-link active" href="/MenuRoleMapping/IndexMenuRoleMapping?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
 
                 }
                 else
                 {
-                    <li class="page-item"><a class="page-link" href="/Menu/IndexMenu?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
+                    <li class="page-item"><a class="page-link" href="/MenuRoleMapping/IndexMenuRoleMapping?orderBy=@Model.OrderBy&currentPage=@i"> @i</a></li>
                 }
             }
             @if (Model.CurrentPage < Model.TotalPages)
             {
                 <li class="page-item">
-                    <a class="page-link" href="/Menu/IndexMenu?orderBy=@Model.OrderBy&currentPage=@Model.CurrentPage+1" aria-label="Next">
+                    <a class="page-link" href="/MenuRoleMapping/IndexMenuRoleMapping?orderBy=@Model.OrderBy&currentPage=@Model.CurrentPage+1" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
@@ -212,18 +205,18 @@
     <script>
         $(document).ready(function () {
             $('.delete-button').click(function () {
-                var menuId = $(this).data('menuid');
-                console.log(menuId);
-                $('#menuIdToDelete').text(menuId); // Set the MenuId in the modal
-                $('#deleteModalButton').attr('href', '/Menu/RemoveMenu?menuId=' + menuId); // Set the Delete button's URL
+                var MappingId = $(this).data('mappingid'); 
+                $('#menuRoleMappingIdToDelete').text(MappingId); // Set the MenuRoleMappingId in the modal
+                $('#deleteModalButton').attr('href', '/MenuRoleMapping/RemoveMenuRoleMapping?menuRoleMappingId=' + MappingId); // Set the Delete button's URL
             });
         });
 
+
         $(document).ready(function () {
             $('.enable-button').click(function () {
-                var menuId = $(this).data('menuid');
-                $('#menuIdToEnable').text(menuId); // Set the MenuId in the modal
-                $('#enableModalButton').attr('href', '/Menu/EnableMenu?menuId=' + menuId); // Set the button's URL
+                var MappingId = $(this).data('mappingid');
+                $('#menuRoleMappingIdToEnable').text(MappingId); // Set the MenuRoleMappingId in the modal
+                $('#enableModalButton').attr('href', '/MenuRoleMapping/EnableMenuRoleMapping?menuRoleMappingId=' + MappingId); // Set the button's URL
             });
         });
     </script>
