--- a/ShoppingCartWeb/Views/Shared/_RegistrationModalPartial.cshtml
+++ b/ShoppingCartWeb/Views/Shared/_RegistrationModalPartial.cshtml
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <!-- Modal HTML as before -->
             <div class="modal-header">
-                <h5 class="modal-title" id="registrationModalLabel">Registereeed Person Details</h5>
+                <h5 class="modal-title" id="registrationModalLabel">Registerwwwed Person Details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
